--- a/src/app/components/user-profile/user-profile.component.scss
+++ b/src/app/components/user-profile/user-profile.component.scss
@@ -24,6 +24,12 @@ ion-item{
   float: left;
 }
 
+.user-profile__rec-segment{
+  // --border-radius: 32px;
+  // padding: 3px;
+  // font-size: 12px;
+}
+
 .user-profile__card__number__col{
   margin-top: auto;
   margin-right: 16px;
