--- a/src/app/pages/movie-page/movie-page.page.html
+++ b/src/app/pages/movie-page/movie-page.page.html
@@ -25,7 +25,7 @@
         <ion-icon name="star-outline" class="top-div__button--rate-icon"></ion-icon>
         Rate
       </ion-button>
-      <ion-button class="top-div__button">
+      <ion-button class="top-div__button" (click)="addMovieToWatchlist()">
         <ion-icon name="add"></ion-icon>
         Watchlist
       </ion-button>
