--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -7,9 +7,33 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
+      <ion-title size="large">Home</ion-title>
     </ion-toolbar>
   </ion-header>
+  <div class="login">
+    <div *ngIf=" auth.user$ | async as user">
+      <!-- <img [src]="user.photoURL" width="50px">
+      <p>
+        <span class="tag is-dark">{{ user.displayName }}</span>
+        <br>
+        <span class="tag is-light">{{ user.uid }}</span>
+      </p> -->
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+      <h1>{{user.displayName}}</h1>
+      <p>{{user.uid}}</p>
+      <!-- <ion-button class="button" routerLink="/chats/9kOUuXQVZqSbPjAHJ8Ab">Join Mega Chat 🎪</ion-button> -->
+      <!-- <ion-button class="button is-info" (click)="chatsService.create()">New Chat</ion-button> -->
+
+
+      <h3>Chats</h3>
+
+      <ul>
+        <li *ngFor="let chat of userChats$ | async">
+          <!-- <h3>{{msg.user?.photoURL}}</h3> -->
+          <a [routerLink]="'/chats/' + chat.id">{{ chat.id }} - {{ chat.messages?.length }} Recommendations </a>
+        </li>
+      </ul>
+    </div>
+
+  </div>
 </ion-content>
