--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -10,10 +10,10 @@
       <ion-label>Search</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
+    <!-- <ion-tab-button tab="tab3">
       <ion-icon name="notifications"></ion-icon>
       <ion-label>Recommendations</ion-label>
-    </ion-tab-button>
+    </ion-tab-button> -->
 
     <ion-tab-button tab="tab4">
       <ion-icon name="person"></ion-icon>
