login/registration flow fixed + added names for displaying recommendations

--- a/src/app/components/recommend-user-card/recommend-user-card.component.html
+++ b/src/app/components/recommend-user-card/recommend-user-card.component.html
@@ -19,7 +19,7 @@
 </div>
 
 <ng-template #sendButton class="profile-card__follow-button">
-  <ion-button (click)="sendRecommendation(user.uid)" value="new">Send</ion-button>
+  <ion-button (click)="sendRecommendation(user)" value="new">Send</ion-button>
 </ng-template>
 
 <ng-template #sentButton class="profile-card__follow-button">
