--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -8,3 +8,18 @@ button {
   margin: 10px;
 }
 
+ion-grid{
+  padding: 0;
+}
+.home-tab__ion-item__recommender-name{
+  color: var(--ion-color-primary, black);
+  padding-left: 0;
+  margin-left: 0;
+}
+
+.item-nativ{
+  padding-left: 0,;
+}
+
+.home-tab__ion-item__recommedations-no{
+}
