--- a/src/app/components/chat/chat.component.html
+++ b/src/app/components/chat/chat.component.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>The Chat</ion-title>
+    <ion-title>Recommendations</ion-title>
     <ion-buttons slot="start">
       <ion-back-button text="" defaultHref="/tabs/tab3"></ion-back-button>
     </ion-buttons>
@@ -11,28 +11,61 @@
 <ion-content>
   <ng-container *ngIf="chat$ | async as chat">
 
-    <div class="chat">
-
-      <ion-grid class="msg" *ngFor="let msg of chat.messages; trackBy: trackByCreated">
+    <!-- THe receivers chat UI -->
+    <div *ngIf="isReceiver">
+      <ion-grid class="recommend__recommendation-grid"
+        *ngFor="let rec of chat.recommendations; trackBy: trackByCreated">
         <ion-row>
-          <ion-col class="user" size="4" offset="3">
-            <ion-img class="user-profile__image" [src]="msg.user?.photoURL"></ion-img>
+          <ion-col class="recommend__recommendation__user">
+            <ion-img class="recommend__recommendation__user-image" [src]="rec.user?.photoURL"></ion-img>
+          </ion-col>
+          <ion-col class="recommend__recommendation-box">
+            <div class="chat__movie-container">
+              <img class="chat__movie-poster" [src]="rec.moviePoster">
+            </div>
+            <ion-row>
+              <p class="recommend__recommendation-box__message" *ngIf="rec.message">{{ rec.message }}</p>
+            </ion-row>
+            <ion-row class="ion-align-items-center">
+              <ion-col class="recommend__recommendation-box__rating_col">
+                <h2 class="recommend__recommendation-box__rating">Rating: {{ rec.senderRating }}
+                  <!-- <ion-icon name="star"></ion-icon> -->
+                </h2>
+              </ion-col>
+            </ion-row>
+            <ion-row class="ion-align-items-center">
+              <ion-button (click)="addMovieToWatchlist(rec.movieId)">Add to watchlist</ion-button>
+              <ion-button (click)="rateBack(rec)">Rate Back</ion-button>
+            </ion-row>
           </ion-col>
         </ion-row>
 
-        <p>{{ msg.content }}</p>
-        <p>{{ msg.movieid }}</p>
+      </ion-grid>
+    </div>
+
+    <!-- the senders chat UI -->
+    <div *ngIf="!isReceiver">
+      <h1>THis is the senders chat </h1>
+      <ion-grid class="msg" *ngFor="let rec of chat.recommendations; trackBy: trackByCreated">
+        <ion-row>
+          <ion-col class="user" size="4" offset="3">
+            <ion-img class="user-profile__image" [src]="rec.user?.photoURL"></ion-img>
+          </ion-col>
+        </ion-row>
+        <p>{{ rec.message }}</p>
+        <p>{{ rec.movieId }}</p>
         <!-- <div class="chat__movie-container"> -->
-        <img class="chat__movie-poster" [src]="msg.moviePoster">
+        <img class="chat__movie-poster" [src]="rec.moviePoster">
         <!-- </div> -->
       </ion-grid>
     </div>
 
     <div class="form">
-      <ion-input [(ngModel)]="newMsg" (keydown.enter)="submit(chat.id)">
-      </ion-input>
-      <ion-button (click)="submit(chat.id)">Send</ion-button>
-
+      <ion-textarea class="recommend__recommendation--text-area" [(ngModel)]="newMsg" (keydown.enter)="submit(chat.id)"
+        placeholder="Enter reply..." auto-grow="true">
+      </ion-textarea>
+      <!-- <ion-button (click)="submit(chat.id)">Send</ion-button> -->
     </div>
+
   </ng-container>
 </ion-content>
