--- a/src/app/pages/recommend-modal/recommend-modal.page.html
+++ b/src/app/pages/recommend-modal/recommend-modal.page.html
@@ -38,7 +38,7 @@
     </ion-row>
     <div *ngFor="let user of inUserFollowingArrObj | async">
       <app-recommend-user-card [user]="user.data" [movieId]="movieID" [moviePoster]="moviePoster"
-        [selectedRating]="selectedRating" [inputtedMessage]="inputtedMessage">
+        [senderRating]="selectedRating" [inputtedMessage]="inputtedMessage">
       </app-recommend-user-card>
     </div>
   </ion-grid>
